--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 <script>
 	document.getElementById("downloadButton").addEventListener("click", function() {
-		var cvLink = "img/covers/Nguyen-Ngoc-Trung-TopCV.vn-091223.152026.pdf";
+		var cvLink = "img/covers/CV-Nguyen-Ngoc-Trung.vn.pdf";
 
 		var linkElement = document.createElement("a");
 		linkElement.href = cvLink;
